

2011-May-19 20:19:33 Mihai Valcu
	* DESCRIPTION (Date, Version): 0.0-3.3
	* xaxt & groups.key added to actogram()

2011-Jan-26  Marina Lehmann
	* DESCRIPTION (Date, Version): 0.0-3.2
	* previously the date on the left strip corresponded to data in the right hand panel, now to the left hand panel
	* added some lines that can be uncommented to change colours of data, left strip and legend
	  
	2010-Nov-08 12:48:33 Mihai Valcu
	* DESCRIPTION (Date, Version): 0.0-3.2
	* new function: actlocator.R, locates points on a given actogram. It still needs to be documented. 
	  A stop should be added if o object is not an actogram
	
2010-Nov-08 12:48:33 Mihai Valcu
	* DESCRIPTION (Date, Version): 0.0-3.1
	* type = "h" added to function arguments (to be passed to panel.xyplot)
	* added 'rug' option. if rug = FALSE then panel.rug() is called

2010-Aug-23  Mihai Valcu

	* DESCRIPTION (Date, Version): 0.0-3
	* Changed the double plot option to allow plotting of two consecutive days.

2010-Aug-05  Mihai Valcu

	* DESCRIPTION (Date, Version): 0.0-2
	* Bug fix: wrong date in left strip. Thanks to Marina Lehmann  <marina.lehmann@uni-konstanz.de>


