@@ -62,14 +62,7 @@ if(missing(strip.left.classes)) {
 	dat$noClass = "a"
 	}
 
-# change of left strip colors
-# background<- trellis.par.get("superpose.polygon")
-# background$col <- c("#777777","#C3C3C3","#E3E3E3","#777777","#C3C3C3","#3A3A3A")
-# trellis.par.set("superpose.polygon", background)
-
 sl = dat[!duplicated(dat$day), c("day", strip.left.classes)]
-
-print(summary(sl))
 
 z = data.frame(table(sl[, strip.left.classes]))
 z$cols = trellis.par.get("superpose.polygon")$col[1:nrow(z)]
@@ -83,12 +76,6 @@ strip.left	= function(which.panel, ...) {
 					grid.rect(gp = gpar(fill = sl[which.panel, "cols"] ))
 					ltext(.5, .5, cex = strip.left.cex, LAB )
 		      }
-
-# panel
-
-#legnd<- trellis.par.get("superpose.symbol")
-#legnd$col <- c("black","red","#C3C3C3","#3A3A3A","#777777","#C3C3C3")
-#trellis.par.set("superpose.symbol", legnd)
 
 panel = function(x,y,...) {
 				   y = y/scale
