@@ -29,5 +29,10 @@
 	* DESCRIPTION (Date, Version): 0.0-2
 	* Bug fix: wrong date in left strip. Thanks to Marina Lehmann  <marina.lehmann@uni-konstanz.de>
 
+2011-Sep-09  Mihai Valcu
+
+	* DESCRIPTION (Date, Version): 0.0-3.4
+	* minor change
+
 
 
